# crystal-eye

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
sources/facebook/: login.html
src/crystal_eye/: __main__.py  banner.py  config.py  main.py
src/crystal_eye/db/: engine.py  models.py  repository.py
src/crystal_eye/display/: panels.py
src/crystal_eye/export/: exporter.py
src/crystal_eye/repl/: commands.py  completer.py  shell.py  wizard.py
src/crystal_eye/server/: app.py  routes.py  runner.py  tls.py
src/crystal_eye/templates/: loader.py  registry.py
src/crystal_eye/tunnel/: base.py  cloudflared.py  ngrok.py
templates/facebook/: 2fa.html  error.html  login.html  manifest.json
templates/facebook/static/: style.css
templates/instagram/: 2fa.html  error.html  login.html  manifest.json
templates/instagram/static/: style.css
tests/: conftest.py  test_config.py  test_db.py  test_export.py  test_server.py  test_templates.py
