[project]
name = "crystal-eye"
version = "0.1.0"
description = "Phishing simulation toolkit for cybersecurity professionals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Crystal Eye Contributors" }
]
keywords = ["security", "phishing", "simulation", "pentest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "prompt-toolkit>=3.0.50",
    "rich>=13.9.0",
    "jinja2>=3.1.4",
    "cryptography>=44.0.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.18",
    "pyngrok>=7.5.1",
]

[project.scripts]
crystal-eye = "crystal_eye.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crystal_eye"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "crystal_eye/_bundled_templates"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
